--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u8" class="ax_default table_cell">
-                <img id="u8_img" class="img " src="images/index/u8.png"/>
+                <img id="u8_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u9" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -80,7 +80,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u10" class="ax_default table_cell">
-                <img id="u10_img" class="img " src="images/index/u10.png"/>
+                <img id="u10_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u11" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -89,7 +89,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u12" class="ax_default table_cell">
-                <img id="u12_img" class="img " src="images/index/u12.png"/>
+                <img id="u12_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u13" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -98,7 +98,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u14" class="ax_default table_cell">
-                <img id="u14_img" class="img " src="images/index/u14.png"/>
+                <img id="u14_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u15" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -107,7 +107,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u16" class="ax_default table_cell">
-                <img id="u16_img" class="img " src="images/index/u12.png"/>
+                <img id="u16_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u17" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -116,7 +116,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u18" class="ax_default table_cell">
-                <img id="u18_img" class="img " src="images/index/u18.png"/>
+                <img id="u18_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u19" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -125,7 +125,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u20" class="ax_default table_cell">
-                <img id="u20_img" class="img " src="images/index/u20.png"/>
+                <img id="u20_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u21" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -134,7 +134,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u22" class="ax_default table_cell">
-                <img id="u22_img" class="img " src="images/index/u22.png"/>
+                <img id="u22_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u23" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -143,7 +143,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u24" class="ax_default table_cell">
-                <img id="u24_img" class="img " src="images/index/u24.png"/>
+                <img id="u24_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u25" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -152,7 +152,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u26" class="ax_default table_cell">
-                <img id="u26_img" class="img " src="images/index/u26.png"/>
+                <img id="u26_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u27" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -161,7 +161,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u28" class="ax_default table_cell">
-                <img id="u28_img" class="img " src="images/index/u28.png"/>
+                <img id="u28_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u29" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -170,7 +170,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u30" class="ax_default table_cell">
-                <img id="u30_img" class="img " src="images/index/u26.png"/>
+                <img id="u30_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u31" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -179,7 +179,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u32" class="ax_default table_cell">
-                <img id="u32_img" class="img " src="images/index/u32.png"/>
+                <img id="u32_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u33" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
@@ -188,7 +188,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u34" class="ax_default table_cell">
-                <img id="u34_img" class="img " src="images/index/u34.png"/>
+                <img id="u34_img" class="img " src="resources/images/transparent.gif"/>
                 <!-- Unnamed () -->
                 <div id="u35" class="text" style="display:none; visibility: hidden">
                   <p><span></span></p>
